fixed some whitespace issues with navigation, changed viewportWidth to enable parralax to 768 (the same that desktop navigation begins showing) and reset headings to have naturally font-weight set to normal

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -21,3 +21,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+h2,h3,h4,h5,h6 {
+  font-weight: normal;
+}
